--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,14 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">10,988</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">84</td><td>regression</td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">TestNGDemo.MyFirstTestcase</td><td><a href="#m0">checkIcon</a></td><td rowspan="1">1725690633786</td><td rowspan="1">4056</td></tr><tr class="passedeven"><td><a href="#m1">close</a></td><td rowspan="1">1725690638097</td><td rowspan="1">186</td></tr><tr class="passedeven"><td><a href="#m2">login</a></td><td rowspan="1">1725690637845</td><td rowspan="1">242</td></tr><tr class="passedeven"><td><a href="#m3">openapp</a></td><td rowspan="1">1725690627338</td><td rowspan="1">6433</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">TestNGGrouping.TestPayment</td><td><a href="#m0">TestPAymentDollers</a></td><td rowspan="1">1726035070350</td><td rowspan="1">14</td></tr><tr class="passedeven"><td><a href="#m1">TestPAymentTaka</a></td><td rowspan="1">1726035070373</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="2">TestNGGrouping.TestSignup</td><td><a href="#m2">TestFacebookSignup</a></td><td rowspan="1">1726035070378</td><td rowspan="1">3</td></tr><tr class="passedodd"><td><a href="#m3">TestTwitterSignup</a></td><td rowspan="1">1726035070384</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">TestNGDemo.MyFirstTestcase#checkIcon</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">TestNGDemo.MyFirstTestcase#close</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">TestNGDemo.MyFirstTestcase#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">TestNGDemo.MyFirstTestcase#openapp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">TestNGGrouping.TestPayment#TestPAymentDollers</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">TestNGGrouping.TestPayment#TestPAymentTaka</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">TestNGGrouping.TestSignup#TestFacebookSignup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">TestNGGrouping.TestSignup#TestTwitterSignup</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
