--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f88290">  <td>24/09/07 12:30:33</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestcase.checkIcon()[pri:1, instance:TestNGDemo.MyFirstTestcase@41fbdac4]">checkIcon</td> 
+<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/07 12:30:38</td>   <td>4311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestcase.close()[pri:3, instance:TestNGDemo.MyFirstTestcase@41fbdac4]">close</td> 
+<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/07 12:30:37</td>   <td>4059</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestcase.login()[pri:2, instance:TestNGDemo.MyFirstTestcase@41fbdac4]">login</td> 
+<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/07 12:30:27</td>   <td>-6449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MyFirstTestcase.openapp()[pri:0, instance:TestNGDemo.MyFirstTestcase@41fbdac4]">openapp</td> 
+<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
   <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f88290">  <td>24/09/12 10:37:48</td>   <td>128</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderHardcode.TestLogout()[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">&lt;&lt;TestLogout</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="f88290">  <td>24/09/12 10:37:40</td>   <td>-7339</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderHardcode.TestSetup()[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">&gt;&gt;TestSetup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
