--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,21 +4,21 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>DataProvider.DataProviderHardcode</td>
+<td>PageObjectModel.TestLogin</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestLogin</td>
+<td>LoginTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestSetup</td>
+<td>setup</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
@@ -31,6 +31,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>TestLogout</td>
+<td>closeTest</td>
 <td>&nbsp;</td></tr>
 </table>
