--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
+<tr bgcolor="f88290">  <td>24/09/15 22:55:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TestLogin.LoginTest()[pri:0, instance:PageObjectModel.TestLogin@5fdcaa40]">LoginTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/12 10:37:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderHardcode.TestLogin(java.lang.String,java.lang.String)[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">TestLogin</td> 
-  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/12 10:37:48</td>   <td>128</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderHardcode.TestLogout()[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">&lt;&lt;TestLogout</td> 
+<tr bgcolor="f88290">  <td>24/09/15 22:55:16</td>   <td>8112</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestLogin.closeTest()[pri:0, instance:PageObjectModel.TestLogin@5fdcaa40]">&lt;&lt;closeTest</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="f88290">  <td>24/09/12 10:37:40</td>   <td>-7339</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderHardcode.TestSetup()[pri:0, instance:DataProvider.DataProviderHardcode@7c729a55]">&gt;&gt;TestSetup</td> 
+<tr bgcolor="f88290">  <td>24/09/15 22:53:53</td>   <td>-74867</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestLogin.setup()[pri:0, instance:PageObjectModel.TestLogin@5fdcaa40]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
